# ModelTea-stdlib

./: .clang-format  CMakeLists.txt
include/: mtea.hpp  mtea_creation.hpp  mtea_except.hpp  mtea_math.hpp  mtea_string.hpp  mtea_types.hpp  mtstd.hpp  mtstd_compat.h  mtstd_compat_types.h  mtstd_creation.hpp  mtstd_except.hpp  mtstd_string.hpp  mtstd_types.hpp  mtstdlib.hpp  mtstdlib_creation.hpp  mtstdlib_except.hpp  mtstdlib_string.hpp  mtstdlib_string_common.hpp  mtstdlib_types.hpp
src/: mtea_creation.cpp  mtea_math.cpp  mtea_string.cpp  mtea_types.cpp  mtstd.cpp  mtstd.hpp  mtstd_compat.cpp  mtstd_creation.cpp  mtstd_except.hpp  mtstd_ext.cpp  mtstd_ext.hpp  mtstd_string.cpp  mtstd_string.hpp  mtstd_types.cpp  mtstdlib_creation.cpp  mtstdlib_ext.cpp  mtstdlib_string.cpp  mtstdlib_types.cpp
src/tmdlstd/: tmdlstd.cpp  tmdlstd.hpp  tmdlstd_except.hpp  tmdlstd_ext.cpp  tmdlstd_ext.hpp  tmdlstd_string.cpp  tmdlstd_string.hpp
tests/: arith_block.cpp  block_arith.cpp  block_clock.cpp  block_const.cpp  clock_block.cpp  compat_block_list.cpp  const_block.cpp
